feat: expose FoodNoms freshness
